--- a/Silly Song/Base.lproj/Main.storyboard
+++ b/Silly Song/Base.lproj/Main.storyboard
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Silly_Song" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +17,57 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Silly Song" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hWE-YN-ijb">
+                                <rect key="frame" x="134" y="20" width="332" height="118"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="118" id="7N2-B3-uLr"/>
+                                    <constraint firstAttribute="width" constant="332" id="Teu-Yo-IgA"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Noteworthy-Bold" family="Noteworthy" pointSize="60"/>
+                                <color key="textColor" red="0.50196081400000003" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Enter Your Name Here" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6G2-PN-A4v">
+                                <rect key="frame" x="20" y="174" width="560" height="29"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="words" returnKeyType="done"/>
+                                <connections>
+                                    <action selector="displayLyrics:" destination="BYZ-38-t0r" eventType="editingDidEnd" id="vkm-X0-npB"/>
+                                    <action selector="reset:" destination="BYZ-38-t0r" eventType="editingDidBegin" id="aCE-la-fv3"/>
+                                </connections>
+                            </textField>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="Fc1-md-5ke">
+                                <rect key="frame" x="157" y="243" width="286" height="174"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="286" id="10j-Nx-dvg"/>
+                                    <constraint firstAttribute="height" constant="174" id="LqW-Do-7Ug"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="leadingMargin" secondItem="6G2-PN-A4v" secondAttribute="leading" id="8lZ-kb-a0x"/>
+                            <constraint firstItem="hWE-YN-ijb" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="Mpf-ai-wP5"/>
+                            <constraint firstItem="6G2-PN-A4v" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="VYw-g5-7Cg"/>
+                            <constraint firstItem="Fc1-md-5ke" firstAttribute="top" secondItem="6G2-PN-A4v" secondAttribute="bottom" constant="40" id="Vcy-gT-eaN"/>
+                            <constraint firstItem="Fc1-md-5ke" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="fHc-Qv-jQs"/>
+                            <constraint firstItem="6G2-PN-A4v" firstAttribute="top" secondItem="hWE-YN-ijb" secondAttribute="bottom" constant="36" id="kmf-dL-7Hl"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="6G2-PN-A4v" secondAttribute="trailing" id="pBl-MW-shi"/>
+                            <constraint firstItem="hWE-YN-ijb" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="tfv-zp-Pdp"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="lyricsView" destination="Fc1-md-5ke" id="csq-Ai-5pM"/>
+                        <outlet property="nameField" destination="6G2-PN-A4v" id="2Pq-ou-yd8"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="245" y="306"/>
         </scene>
     </scenes>
 </document>
